--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@grapesjs/studio-sdk": "^1.0.52",
     "@tailwindcss/vite": "^4.1.11",
+    "antd": "^5.26.4",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "react-router": "^7.6.3",
     "react-router-dom": "^7.6.3",
