--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@grapesjs/studio-sdk": "^1.0.52",
+    "@grapesjs/studio-sdk-plugins": "^1.0.26",
     "@tailwindcss/vite": "^4.1.11",
     "antd": "^5.26.4",
     "moment": "^2.30.1",
