--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
     "react-router-dom": "^7.6.3",
     "tailwindcss": "^4.1.11"
